deps/crates/vendor/tracing-attributes/tests/ui/fail/unused_instrumented_fn.rs
#![deny(dead_code)]

#[tracing::instrument]
fn never_used() {}

fn main() {}
