deps/crates/vendor/tracing-attributes/tests/ui/fail/unused_instrumented_fn.stderr
error: function `never_used` is never used
 --> tests/ui/fail/unused_instrumented_fn.rs:4:4
  |
4 | fn never_used() {}
  |    ^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/ui/fail/unused_instrumented_fn.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^
